Deprecation: replace new Integer(int) with Integer.valueOf(int)