@@ -251,7 +251,7 @@ class IntHashtableEnumerator implements Enumeration {
 		if (entry != null) {
 			IntHashtableEntry e = entry;
 			entry = e.next;
-			return keys ? new Integer(e.key) : e.value;
+			return keys ? Integer.valueOf(e.key) : e.value;
 		}
 		throw new NoSuchElementException("IntHashtableEnumerator");
 	}
