@@ -137,7 +137,7 @@ public abstract class PersistentColumnsTable
 		TableModel model = new AbstractTableModel() {
 			public int getColumnCount() { return 10; }
 			public int getRowCount() { return 10;}
-			public Object getValueAt(int row, int col) { return new Integer(row*col); }
+			public Object getValueAt(int row, int col) { return Integer.valueOf(row*col); }
 			public boolean isCellEditable(int row, int col)	{ return true; }
 		};
 		final JTable table = new JTable(model);
